# LARS_Comparison

./: .gitignore  LARS_Comparison build instructions.txt  LARS_Comparison.py  LICENSE  LarsDataClass.py  README.md  build_instructions.txt  filters.py  gui.py  helpers.py  needlemanwunsch.py  plotfunctions.py  pyproject.toml
src/MetroLaserLARS/: LARS_Comparison.py  LarsDataClass.py  LarsFunctions.py  Lars_Comparison_app.py  __init__.py  app.py  app_helpers.py  app_window_clustering.py  app_window_part_matching.py  app_window_peak_list.py  app_window_plot.py  app_window_results_table.py  filters.py  gui.py  helpers.py  infotext.py  ml_functions.py  needlemanwunsch.py  plotfunctions.py  tst_clustering.py  tst_lepage.py
src/MetroLaserLARS/cnn/: metrics.py
src/MetroLaserLARS/cnn/.ipynb_checkpoints/: callbacks-checkpoint.py  data_generators-checkpoint.py  preprocessing-checkpoint.py  simulator-checkpoint.py
