[project]
name = "MetroLaserLARS"
version = "0.0.6"
authors = [
  { name="Karl Olson", email="kolson@metrolaserinc.com" },
]
description = "Data analysis for MetroLaser, Inc. Laser Acoustic Resonance Spectroscopy systems"
readme = "README.md"
requires-python = ">=3.12.7,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib>=3.9.2",
  "numpy<2,>=1.26.4",
  "scipy>=1.13.1",
  "numba>=0.60.0"
]

[project.urls]
Homepage = "https://github.com/kolsonmetrolaser/LARS_Comparison"
Issues = "https://github.com/kolsonmetrolaser/LARS_Comparison/issues"
