[project]
name = "MetroLaserLARS"
version = "0.1.5"
authors = [
  { name="Karl Olson", email="kolson@metrolaserinc.com" },
]
description = "Data analysis for MetroLaser, Inc. Laser Acoustic Resonance Spectroscopy systems"
readme = "README.md"
requires-python = ">=3.8,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib>=3"
  ,"numpy<2,>=1.20"
  ,"scipy>=1.10"
  ,"numba>=0.55.0"
  ,"pytdms"
]

[project.urls]
Homepage = "https://github.com/kolsonmetrolaser/LARS_Comparison"
Issues = "https://github.com/kolsonmetrolaser/LARS_Comparison/issues"
