[project]
name = "MetroLaserLARS"
version = "0.2.2"
authors = [
  { name="Karl Olson", email="kolson@metrolaserinc.com" },
  { name="Adityan Vairavel", email="avairavel@metrolaserinc.com" },
  { name="Cecil Hess", email="chess@metrolaserinc.com" }
]
description = "Data analysis for MetroLaser, Inc. Laser Acoustic Resonance Spectroscopy systems"
readme = "README.md"
requires-python = ">=3.8,<=3.10.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib>=3"
  ,"numpy<2,>=1.20"
  ,"scipy>=1.10"
  ,"numba>=0.55.0"
  ,"pytdms"
  ,"pandas>=2.2.3"
  ,"tensorflow>=2.18"
  ,"PyThreadKiller"
]

[project.urls]
Homepage = "https://github.com/kolsonmetrolaser/LARS_Comparison"
Issues = "https://github.com/kolsonmetrolaser/LARS_Comparison/issues"
